// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modernpoacher/sprockets/components/group/fieldset <Group /> With additional props renders 1`] = `
<fieldset
  className="MOCK CLASSNAME"
  onChange={[MockFunction]}
/>
`;

exports[`@modernpoacher/sprockets/components/group/fieldset <Group /> With required props renders 1`] = `
<fieldset
  className="MOCK CLASSNAME"
/>
`;
